--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>Douglas R.C. James' Portfolio</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio website for Douglas R.C. James containing his past, current, and future works."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -24,7 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
